# game_2048

./: Cargo.toml  build.sh  index.html  style.css
pkg/: game_2048.js  game_2048_bg.wasm
src/: lib.rs
