[package]
name = "game-2048"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.5"
wasm-bindgen = "0.2.86"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
web-sys = "0.3.63"
features = [
'Document',
'Element',
'HtmlElement',
'Node',
'Window'
]
